# star-tracker

./: .gitignore  CMakeLists.txt  README.md
benchmark/: benchmark.cc  generate-and-test.sh
cmake/: startrackerConfig.cmake.in
src/: attitude.cc  attitude.hpp  camera.cc  camera.hpp  centroid.cc  centroid.hpp  database.cc  database.hpp  io.cc  io.hpp  star.cc  star.hpp  starid.cc  starid.hpp  stfloat.h
test/: test_attitude.cc  test_camera.cc  test_centroid.cc  test_database.cc  test_precision.hpp  test_serialize.cc  test_star.cc  test_starid.cc  test_vec.cc
tools/: generate-catalog.cc  generate-db.cc  generate-stars.cc
